--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-02 10:12+0100\n"
+"POT-Creation-Date: 2024-05-03 14:29+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -112,6 +112,22 @@ msgstr ""
 "Dewiswch os cafodd eich genedigaeth ei chofrestru gan wasanaeth "
 "cofrestru’r Lluoedd, neu gan Gonswl Prydeinig neu Uchel Gomisiwn, neu dan"
 " ddarpariaethau Llongau Masnach neu Hedfan Sifil"
+
+#: grc/birth_registration/constants.py:23
+msgid "You need to be at least 18 years old to apply"
+msgstr "Mae angen i chi fod yn 18 oed o leiaf i wneud cais"
+
+#: grc/birth_registration/constants.py:24
+msgid "You need to be less than 110 years old to apply"
+msgstr "Mae angen i chi fod yn iau na 110 oed i wneud cais"
+
+#: grc/birth_registration/constants.py:25
+msgid ""
+"Your date of birth must be before your transition date and statutory "
+"declaration date"
+msgstr ""
+"Rhaid i’ch dyddiad geni fod cyn dyddiad eich trawsnewidiad a dyddiad eich"
+" datganiad statudol"
 
 #: grc/business_logic/constants.py:5 grc/templates/policies/cookies.html:114
 msgid "Yes"
@@ -441,6 +457,10 @@ msgstr "Nodwch ddyddiad yn y gorffennol"
 msgid "Enter a date at least 2 years before your application"
 msgstr "Nodwch ddyddiad o leiaf 2 o flynyddoedd cyn eich cais"
 
+#: grc/business_logic/constants.py:94
+msgid "Enter a valid date"
+msgstr "Nodwch ddyddiad dilys"
+
 #: grc/document_checker/constants.py:7
 msgid "Statutory declaration for applicants who are married"
 msgstr "Datganiad statudol ar gyfer ceiswyr sy’n briod"
@@ -538,8 +558,8 @@ msgid "Invalid email address."
 msgstr ""
 
 #: grc/lazy/lazy_form_custom_validators.py:87
-#: grc/utils/form_custom_validators.py:434
-#: grc/utils/form_custom_validators.py:453
+#: grc/utils/form_custom_validators.py:432
+#: grc/utils/form_custom_validators.py:451
 msgid "File does not have an approved extension: {extensions}"
 msgstr ""
 
@@ -3015,7 +3035,4 @@ msgstr "Byddwch angen eich cyfeirnod i ddychwelyd i’ch cais"
 #: grc/templates/start-application/reference-number.html:27
 msgid "Keep a record of it – it can't be recovered if you lose it"
 msgstr "Cadwch gofnod ohono - ni allwch ei gael yn ôl os byddwch yn ei golli"
-
-#~ msgid "DO_NOT_KNOW"
-#~ msgstr ""
 
